--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "mern-estate",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "index.js",
+  "type": "module",
   "scripts": {
-    "dev":"nodemon api/index.js",
-    "start":"node api/index.js "
+    "dev": "nodemon api/index.js",
+    "start": "node api/index.js "
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,10 @@
   "homepage": "https://github.com/mythili1711/mern-estate#readme",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "mongodb": "^6.16.0",
+    "mongoose": "^8.14.3",
     "nodemon": "^3.1.10"
   }
 }
