--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.3",
     "nodemon": "^3.1.10",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0"
   }
 }
